--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next start -p 3001",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.5",
     "@mui/material-nextjs": "^7.3.5",
+    "@next/env": "^16.0.10",
     "axios": "^1.13.2",
     "next": "16.0.5",
     "nookies": "^2.5.2",
