--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "nookies": "^2.5.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-number-format": "^5.4.4",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
